@@ -351,6 +351,64 @@ commandMap = {
         "zfcp": zfcp.FC3_ZFCP,
     },
 
+    # based on f8
+    F9: {
+        "auth": authconfig.FC3_Authconfig,
+        "authconfig": authconfig.FC3_Authconfig,
+        "autopart": autopart.FC3_AutoPart,
+        "autostep": autostep.FC3_AutoStep,
+        "bootloader": bootloader.F8_Bootloader,
+        "cdrom": method.FC6_Method,
+        "clearpart": clearpart.FC3_ClearPart,
+        "cmdline": displaymode.FC3_DisplayMode,
+        "device": device.F8_Device,
+        "deviceprobe": deviceprobe.FC3_DeviceProbe,
+        "dmraid": dmraid.FC6_DmRaid,
+        "driverdisk": driverdisk.FC3_DriverDisk,
+        "firewall": firewall.FC3_Firewall,
+        "firstboot": firstboot.FC3_Firstboot,
+        "graphical": displaymode.FC3_DisplayMode,
+        "halt": reboot.FC6_Reboot,
+        "harddrive": method.FC6_Method,
+        "ignoredisk": ignoredisk.F8_IgnoreDisk,
+        "install": upgrade.FC3_Upgrade,
+        "interactive": interactive.FC3_Interactive,
+        "iscsi": iscsi.FC6_Iscsi,
+        "iscsiname": iscsiname.FC6_IscsiName,
+        "key": key.F7_Key,
+        "keyboard": keyboard.FC3_Keyboard,
+        "lang": lang.FC3_Lang,
+        "logging": logging.FC6_Logging,
+        "logvol": logvol.FC4_LogVol,
+        "mediacheck": mediacheck.FC4_MediaCheck,
+        "monitor": monitor.FC6_Monitor,
+        "multipath": multipath.FC6_MultiPath,
+        "network": network.F8_Network,
+        "nfs": method.FC6_Method,
+        "part": partition.FC4_Partition,
+        "partition": partition.FC4_Partition,
+        "poweroff": reboot.FC6_Reboot,
+        "raid": raid.F7_Raid,
+        "reboot": reboot.FC6_Reboot,
+        "repo": repo.F8_Repo,
+        "rootpw": rootpw.F8_RootPw,
+        "selinux": selinux.FC3_SELinux,
+        "services": services.FC6_Services,
+        "shutdown": reboot.FC6_Reboot,
+        "skipx": skipx.FC3_SkipX,
+        "text": displaymode.FC3_DisplayMode,
+        "timezone": timezone.FC6_Timezone,
+        "updates": updates.F7_Updates,
+        "upgrade": upgrade.FC3_Upgrade,
+        "url": method.FC6_Method,
+        "user": user.F8_User,
+        "vnc": vnc.FC6_Vnc,
+        "volgroup": volgroup.FC3_VolGroup,
+        "xconfig": xconfig.FC6_XConfig,
+        "zerombr": zerombr.FC3_ZeroMbr,
+        "zfcp": zfcp.FC3_ZFCP,
+    },
+
     # based on fc1
     RHEL3: {
         "auth": authconfig.FC3_Authconfig,
@@ -569,6 +627,20 @@ dataMap = {
         "ZFCPData": zfcp.FC3_ZFCPData,
     },
     F8: {
+        "DeviceData": device.F8_DeviceData,
+        "DmRaidData": dmraid.FC6_DmRaidData,
+        "IscsiData": iscsi.FC6_IscsiData,
+        "LogVolData": logvol.FC4_LogVolData,
+        "MultiPathData": multipath.FC6_MultiPathData,
+        "NetworkData": network.F8_NetworkData,
+        "PartData": partition.FC4_PartData,
+        "RaidData": raid.F7_RaidData,
+        "RepoData": repo.F8_RepoData,
+        "UserData": user.F8_UserData,
+        "VolGroupData": volgroup.FC3_VolGroupData,
+        "ZFCPData": zfcp.FC3_ZFCPData,
+    },
+    F9: {
         "DeviceData": device.F8_DeviceData,
         "DmRaidData": dmraid.FC6_DmRaidData,
         "IscsiData": iscsi.FC6_IscsiData,
